--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link
       rel="stylesheet"
-      href="/assets/vendor/bootstrap-5.2.3-dist/css/bootstrap.min.css"
+      href="assets/vendor/bootstrap-5.2.3-dist/css/bootstrap.min.css"
     />
     <style>
       .nav-link.active {
@@ -55,7 +55,7 @@
     <section
       id="home"
       class="d-flex min-vh-100 flex-column justify-content-center align-items-center"
-      style="background-image: url('/assets/img/hero-bg.jpeg')"
+      style="background-image: url('assets/img/hero-bg.jpeg')"
     >
       <h1 class="fw-bolder display-1 mb-3">Robert Aritonang</h1>
       <h6 class="fs-3 text-secondary text-capitalize mb-4">
@@ -73,7 +73,7 @@
       </div>
       <div class="row">
         <div class="col-md-4 mb-3">
-          <img src="/assets/img/about.jpeg" alt="" class="img-fluid" />
+          <img src="assets/img/about.jpeg" alt="" class="img-fluid" />
         </div>
         <div class="col-md-7 offset-lg-1">
           <p class="lh-lg">
@@ -141,21 +141,21 @@
         <div class="row pb-5">
           <div class="col-md-6 col-lg-4 mb-4">
             <img
-              src="/assets/img/img1.png"
+              src="assets/img/img1.png"
               alt=""
               class="img-fluid img-thumbnail"
             />
           </div>
           <div class="col-md-6 col-lg-4 mb-4">
             <img
-              src="/assets/img/img2.png"
+              src="assets/img/img2.png"
               alt=""
               class="img-fluid img-thumbnail"
             />
           </div>
           <div class="col-md-6 col-lg-4 mb-4">
             <img
-              src="/assets/img/img3.png"
+              src="assets/img/img3.png"
               alt=""
               class="img-fluid img-thumbnail"
             />
@@ -174,7 +174,7 @@
       <div class="row pb-5">
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="card">
-            <img src="/assets/img/img5.jpg" alt="" class="card-img-top" />
+            <img src="assets/img/img5.jpg" alt="" class="card-img-top" />
             <div class="card-body">
               <h5 class="card-title text-center py-2">
                 What is Network Security?
@@ -191,7 +191,7 @@
         </div>
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="card">
-            <img src="/assets/img/img6.jpeg" alt="" class="card-img-top" />
+            <img src="assets/img/img6.jpeg" alt="" class="card-img-top" />
             <div class="card-body">
               <h5 class="card-title text-center py-2">
                 How artificial intelligence is transforming the world
@@ -209,7 +209,7 @@
         </div>
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="card">
-            <img src="/assets/img/img7.jpeg" alt="" class="card-img-top" />
+            <img src="assets/img/img7.jpeg" alt="" class="card-img-top" />
             <div class="card-body">
               <h5 class="card-title text-center py-2">
                 10 Articles Every Web Developer Should Read
@@ -277,6 +277,6 @@
       </div>
     </footer>
 
-    <script src="/assets/vendor/bootstrap-5.2.3-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/vendor/bootstrap-5.2.3-dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
